--- a/main.tex
+++ b/main.tex
@@ -28,20 +28,29 @@
 
 \maketitle
 
+\usepackage{xcolor}
+\definecolor{ForestGreen}{rgb}{0.0, 0.5, 0.0}
+\newcommand{\vincent}[1]{{\color{ForestGreen}#1}}
+\newcommand{\vincentrmk}[1]{{\color{ForestGreen}\bf #1}}
+
+
 \section{Context}
 \label{sec:orgf816e45}
 
-Le début du XXIème siècle a vu une augmentation spectaculaire d’applications
-informatiques apportant une assistance à de nombreuses activités
-humaines, y compris pour le secteur de la médecine. L’utilisation de
-la technologie appliquée à la santé est devenue un des points
-d’intérêt de notre société, par exemple pour 
-\begin{itemize}
-\item l’emploi des robots d'assistances en chirurgie~;
-\item la mesure des données physiologiques comme le taux de sucre dans le sang pour les diabétiques~;
-\item les \emph{serious games} pour réapprendre à marcher~;
-\item le dossier médical partagé.
-\end{itemize}
+Le début  du XXIème  siècle a vu  une augmentation  spectaculaire d’applications
+informatiques apportant  une assistance  à de  nombreuses activités  humaines, y
+compris  pour  le  secteur  de  la médecine.  L’utilisation  de  la  technologie
+appliquée à la santé  est devenue un des points d’intérêt  de notre société, par
+exemple  pour l’emploi  des robots  d'assistances  en chirurgie,  la mesure  des
+données physiologiques comme le taux de sucre dans le sang pour les diabétiques,
+ou le dossier médical partagé.
+
+%% \begin{itemize}
+%% \item l’emploi des robots d'assistances en chirurgie~;
+%% \item la mesure des données physiologiques comme le taux de sucre dans le sang pour les diabétiques~;
+%% \item les \emph{serious games} pour réapprendre à marcher~;
+%% \item le dossier médical partagé.
+%% \end{itemize}
 
 %% Ces innovations qui parsèment le champ de santé émergent dans un domaine
 %% important qui est celui de la gestion de la douleur. 
@@ -74,19 +83,20 @@ patient.
 \subsection{\'Etat de l'art}
 \label{sec:org08f9dfb}
 
-Plusieurs travaux ont  d\'ej\`a essayé d’obtenir un système de détection de la douleur par l’analyse des
-données biométriques, telles ques  les pupilles, la voix, l'ECG etc.). La reconnaissance
-faciale est l'un des systèmes qui se révèle le plus prometteur pour mesurer et
-analyser la douleur d'un patient efficacement.  Afin d’atteindre
-cet objectif, plusieurs systèmes ont utilisé des collections de données
-affectées de codes FACS (\emph{Facial Action Coding System})~\cite{lucey2011painful}. 
+Plusieurs travaux  ont d\'ej\`a essayé d’obtenir  un système de détection  de la
+douleur par  l’analyse des  données biométriques, telles  ques les  pupilles, la
+voix, l'ECG etc.). La reconnaissance faciale est l'un des systèmes qui se révèle
+le  plus   prometteur  pour  mesurer   et  analyser  la  douleur   d'un  patient
+efficacement.  Afin d’atteindre cet objectif, plusieurs systèmes ont utilisé des
+collections  de données  affectées  de codes  FACS~(\emph{Facial Action  Coding
+  System})~\cite{lucey2011painful}.
 
-Le principal travail réalisé sur ce sujet a été la recherche menée par
-l’Université de Pittsburgh "\emph{Automatically Detecting Pain in Video Through Facial
-Action Units}" \cite{lucey2011automatically}. Cette recherche s’est basée principalement sur l’utilisation
-des FACS pour détecter la douleur à partir d'images. Les résultats obtenus
-sont restés limités, puisqu'ils ont porté sur la présence ou l’absence de douleur («
-pain or no pain »). 
+Le  principal  travail  réalisé sur  ce  sujet  a  été  la recherche  menée  par
+l’Université de Pittsburgh "\emph{Automatically  Detecting Pain in Video Through
+  Facial  Action Units}"  \cite{lucey2011automatically}.  Cette  recherche s’est
+basée  principalement sur  l’utilisation des  FACS  pour détecter  la douleur  à
+partir d'images. Les résultats obtenus sont restés limités, puisqu'ils ont porté
+sur la présence ou l’absence de douleur (« pain or no pain »).
 
 Une autre recherche  menée sur le même  sujet avec les mêmes  données, est celle
 qui        a       été        menée        à       l’Université        d’Aalborg
@@ -97,50 +107,59 @@ deux méthodes, il  a été possible de  considérer non seulement une  image et
 FACS, mais aussi d’analyser les images  préalables de la séquence considérée, et
 d’obtenir  une   meilleure  précision  des  résultats.   Cela  permettant  ainsi
 d’atteindre un échelonnement allant de « absence de  douleur « (« no pain ») à «
-forte douleur » ( strong pain ») en  passant par « faible douleur » (« weak pain
-»), cequi a constitué une amélioration significative.
+forte douleur » ( « strong pain ») en  passant par « faible douleur » (« weak pain
+»), ce qui a constitué une première amélioration.
 
-Le point commun de ces recherche est le fait qu’elles utilisent la même base de
-données pour l’apprentissage et cela ne permet pas de fourni une précision
+Le point commun de ces recherches est le fait qu’elles utilisent la même base de
+données pour l’apprentissage et cela ne permet pas de fournir une précision
 suffisante pour constituer un outil vraiment fiable en adéquation des
 obligations légales cliniques. De plus, ces recherches se fondent uniquement sur
 les expressions faciales, et ne prennent pas en considération d’autres facteurs
-comme le ton de la voix, et la sémantique utilisée dans le dialogue.  Ceci afin
-d’autoriser une analyse de la composante émotionnelle, laquelle est un facteur
+comme le ton de la voix, et la sémantique utilisée dans le dialogue. Ces
+facteurs permettent pourtant une analyse de la composante émotionnelle, un facteur
 important lorsqu’il s’agit de mesurer convenablement le niveau de douleur du
 patient~\cite{hale1997emotional}.   
 
 
-\subsection{Methodological approach}
+\subsection{Approche}
 \label{sec:org97cce26}
+
+\vincentrmk{L'approche devrait etre mieux précisée : 1) pour compenser
+  l'absence de  donnees, Lucine  a créée/crée une  base de  donnees et
+  details sur  la base  de donnees;  2) on  souhaite utiliser  le deep
+  learning pour predire la douleur; 3) le deep learning a sans doute
+  besoin de plus de donnees qu’on peut en creer; 4) l'idee de depart
+  de la these est d'integrer la connaissance des experts humains sous
+  forme de systeme expert; 5) nous allons donc developper des methodes
+pour combiner deep learning et systeme expert.}
 
 Cette thèse propose une nouvelle approche du problème avec l’utilisation d’une
 nouvelle base de données générée grâce à la contribution de volontaires
 souffrant de douleurs chroniques (réglementation CNIL / données de santé
-respectées). Même si une nouvelle base de données constitue un bon point de
-départ, l’apprentissage d’un modèle de deep learning peut exiger d’importantes
-quantités de données. C’est pourquoi il a été imaginé de compter sur la
-contribution des praticiens, lesquels ont une longue expérience et une bonne
-connaissance du problème, et ne devraient pas être exclus de l’approche
-proposée. 
+respectées).
 
-En effet, un praticien utilise autre chose qu’une simple image pour mesurer la
+Mais si une nouvelle base de données constitue un bon point de
+départ, l’apprentissage d’un modèle de \emph{Deep Learning} peut exiger d’importantes
+quantités de données. C’est pourquoi nous proposons d'intégrer l'expérience
+des praticiens. 
+
+En effet, un praticien n'utilise pas que son sens de la vue pour mesurer la
 douleur. Il prend en considération de nombreux autres facteurs. C’est pourquoi
 le projet propose d’utiliser l’expérience des praticiens pour compenser le
 faible volume de données d’entraînement, ce qui pourrait se comparer au
 fonctionnement des systèmes experts \cite{giarratano1998expert}. 
 
 Cependant, il n’est pas encore clair à ce jour quelle sera la manière dont il
-sera possible de concilier le deep learning et les systèmes experts. Le but de
+sera possible de concilier le \emph{Deep Learning} et les systèmes experts. Le but de
 cette thèse sera l’exploration des moyens d’y parvenir. 
 
-\section{Objectives}
+\section{Objectifs de la thèse}
 \label{sec:orgf1f9281}
 
 Comme les données sur ce sujet sont plutôt limitées, l’un des principaux
 objectifs de cette thèse sera d’entraîner des systèmes de \emph{Deep Learning} à être
 capables de mesurer de la façon la plus précise possible le niveau de douleur
-sur une vidéo, en utilisant des données réduites grâce à un c\oe{}ur de facteurs de
+à partir d'une vidéo, en utilisant des données réduites grâce à un c\oe{}ur de facteurs de
 décision importé, élaborés par des experts qui ont déjà une connaissance de la
 mesure de la douleur.  
 
@@ -152,7 +171,7 @@ sacrifier les capacités de généralisation du modèle.
 \subsection{Défis scientifiques et technologiques}
 \label{sec:org70ad40f}
 
-Les défis scientifiques que nous explorerons durant cette thèse sont les suivants~:
+Les défis scientifiques que nous explorerons durant cette thèse sont~:
 \begin{itemize}
 \item proposer un modèle capable de fournir efficacement une mesure de la douleur
 \item identifier les principaux points de décision qui peuvent être importés sur
@@ -160,11 +179,13 @@ la base des connaissances des experts, et qui peuvent être utilisés pour
 améliorer les modèles d’apprentissage.
 \end{itemize}
 
+
 \section{Organization}
 \label{sec:org1cc9eab}
 Cette thèse se déroulera sur une période de 36 mois et pendant toute cette
 durée, le temps de travail se répartira entre le laboratoire hôte (le LABRI,
-Université de Bordeaux), et la compagnie (Lucine) Planning
+Université de Bordeaux), et la compagnie (Lucine).
+
 \subsection{Planning}
 \label{sec:org8a30be3}
 \begin{itemize}
