--- a/repport.bib
+++ b/repport.bib
@@ -1,130 +1,166 @@
-@article{milton2013caring,
-  title={Caring for patients with chronic pain: pearls and pitfalls},
-  author={Milton, John},
-  journal={The Journal},
-  volume={113},
-  number={8},
-  pages={620},
-  year={2013}
+%--
+%B
+%--
+
+% check authors names:
+@inproceedings{Bellantonio2016spatio,
+  author = {Bellantonio, Marco and Haque, Mohammad A and Rodriguez, Pau and Nasrollahi, Kamal and Telve, Taisi and Escarela, Sergio and Gonzalez, Jordi and Moeslund, Thomas B and Rasti, Pejman and Anbarjafari, Gholamreza},
+  title = {{Spatio-Temporal Pain Recognition in Cnn-Based Super-Resolved Facial Images}},
+  booktitle = {International Workshop on Face and Facial Expression Recognition from Real World Videos},
+  pages = "151--162",
+  year = 2016
 }
 
-@inproceedings{bellantonio2016spatio,
-  title={Spatio-temporal pain recognition in cnn-based super-resolved facial images},
-  author={Bellantonio, Marco and Haque, Mohammad A and Rodriguez, Pau and Nasrollahi, Kamal and Telve, Taisi and Escarela, Sergio and Gonzalez, Jordi and Moeslund, Thomas B and Rasti, Pejman and Anbarjafari, Gholamreza},
-  booktitle={International Workshop on Face and Facial Expression Recognition from Real World Videos},
-  pages={151--162},
-  year={2016},
-  organization={Springer}
+%--
+%E
+%--
+
+% check authors names:
+@book{Ekman1997face,
+  author = {Ekman, Paul and Rosenberg, Erika L.},
+  title = {{What the Face Reveals: Basic and Applied Studies of Spontaneous Expression Using the Facial Action Coding System (FACS)}},
+  publisher = {Oxford University Press, USA},
+  year = 1997
 }
 
-@book{giarratano1998expert,
-  title={Expert systems},
-  author={Giarratano, Joseph C and Riley, Gary},
-  year={1998},
-  publisher={PWS Publishing Co.}
+%--
+%G
+%--
+
+% check authors names:
+@article{Galer1997development,
+  author = {Galer, Bradley S. and Jensen, Mark P.},
+  title = {{Development and Preliminary Validation of a Pain Measure Specific to Neuropathic Pain the Neuropathic Pain Scale}},
+  journal = {Neurology},
+  volume = "48",
+  number = "2",
+  pages = "332--338",
+  year = 1997
 }
 
-@article{lucey2011automatically,
-  title={Automatically detecting pain in video through facial action units},
-  author={Lucey, Patrick and Cohn, Jeffrey F and Matthews, Iain and Lucey, Simon and Sridharan, Sridha and Howlett, Jessica and Prkachin, Kenneth M},
-  journal={IEEE Transactions on Systems, Man, and Cybernetics, Part B (Cybernetics)},
-  volume={41},
-  number={3},
-  pages={664--674},
-  year={2011},
-  publisher={IEEE}
+% check authors names:
+@book{Giarratano1998expert,
+  author = {Giarratano, Joseph C. and Riley, Gary},
+  title = {{Expert Systems}},
+  publisher = {PWS Publishing Co.},
+  year = 1998
 }
 
-@article{gwen2007faces,
-  title={Faces of pain: automated measurement of spontaneous all facial expressions of genuine and posed pain},
-  author={Gwen, CL and Marian, C and Bartlett, Stewart and Lee, Kang},
-  year={2007}
+% check authors names:
+@article{Gracely1988descriptor,
+  author = {Gracely, Richard H. and Kwilosz, Donna M.},
+  title = {{The Descriptor Differential Scale: Applying Psychophysical Principles to Clinical Pain Assessment}},
+  journal = {Pain},
+  volume = "35",
+  number = "3",
+  pages = "279--288",
+  year = 1988
 }
 
-
-@article{wong1996wong,
-  title={Wong-Baker faces pain rating scale},
-  author={Wong, Donna Lee and Hockenberry-Eaton, M and Wilson, D and Winkelstein, ML and Schwartz, P},
-  journal={Home Health Focus},
-  volume={2},
-  number={8},
-  pages={62},
-  year={1996}
+% check authors names:
+@article{Gwen2007faces,
+  author = {Gwen, C.L. and Marian, C. and Bartlett, Stewart and Lee, Kang},
+  title = {{Faces of Pain: Automated Measurement of Spontaneous All Facial Expressions of Genuine and Posed Pain}},
+  year = 2007
 }
 
-@misc{mccaffery1999pain,
-  title={Pain: clinical manual . St Louis, MO: Mosby},
-  author={McCaffery, M and Pasero, C},
-  year={1999},
-  publisher={Inc}
+%--
+%H
+%--
+
+% check authors names:
+@article{Hale1997emotional,
+  author = {Hale, Carla J. and Hadjistavropoulos, Thomas},
+  title = {{Emotional Components of Pain}},
+  journal = {Pain Research and Management},
+  volume = "2",
+  number = "4",
+  pages = "217--225",
+  year = 1997
 }
 
-@article{portenoy1996visual,
-  title={Visual analog scale and verbal pain intensity scale: from pain management: theory and practice},
-  author={Portenoy, RK and Tanner, RM},
-  journal={Oxford University Press, Inc},
-  volume={1},
-  pages={996},
-  year={1996}
+%--
+%L
+%--
+
+% check authors names:
+@article{Lucey2011automatically,
+  author = {Lucey, Patrick and Cohn, Jeffrey F. and Matthews, Iain and Lucey, Simon and Sridharan, Sridha and Howlett, Jessica and Prkachin, Kenneth M.},
+  title = {{Automatically Detecting Pain in Video through Facial Action Units}},
+  journal = {IEEE Transactions on Systems, Man, and Cybernetics, Part B (Cybernetics)},
+  volume = "41",
+  number = "3",
+  pages = "664--674",
+  year = 2011
 }
 
-@article{melzack1975mcgill,
-  title={The McGill Pain Questionnaire: major properties and scoring methods},
-  author={Melzack, Ronald},
-  journal={Pain},
-  volume={1},
-  number={3},
-  pages={277--299},
-  year={1975},
-  publisher={Elsevier}
+% check authors names:
+@inproceedings{Lucey2011painful,
+  author = {Lucey, Patrick and Cohn, Jeffrey F. and Prkachin, Kenneth M. and Solomon, Patricia E. and Matthews, Iain},
+  title = {{Painful Data: the {UNBC-McMaster} Shoulder Pain Expression Archive Database}},
+  booktitle = FG,
+  pages = "57--64",
+  year = 2011
 }
 
-@article{galer1997development,
-  title={Development and preliminary validation of a pain measure specific to neuropathic pain The Neuropathic Pain Scale},
-  author={Galer, Bradley S and Jensen, Mark P},
-  journal={Neurology},
-  volume={48},
-  number={2},
-  pages={332--338},
-  year={1997},
-  publisher={AAN Enterprises}
+%--
+%M
+%--
+
+@misc{Mccaffery1999pain,
+  author = {McCaffery, M. and Pasero, C.},
+  title = {{Pain: Clinical Manual. St Louis, MO: Mosby}},
+  year = 1999
 }
 
-@article{gracely1988descriptor,
-  title={The Descriptor Differential Scale: applying psychophysical principles to clinical pain assessment},
-  author={Gracely, Richard H and Kwilosz, Donna M},
-  journal={Pain},
-  volume={35},
-  number={3},
-  pages={279--288},
-  year={1988},
-  publisher={Elsevier}
+% check authors names:
+@article{Melzack1975mcgill,
+  author = {Melzack, Ronald},
+  title = {{The {McGill} Pain Questionnaire: Major Properties and Scoring Methods}},
+  journal = {Pain},
+  volume = "1",
+  number = "3",
+  pages = "277--299",
+  year = 1975
 }
 
-
-@article{hale1997emotional,
-  title={Emotional components of pain},
-  author={Hale, Carla J and Hadjistavropoulos, Thomas},
-  journal={Pain Research and Management},
-  volume={2},
-  number={4},
-  pages={217--225},
-  year={1997},
-  publisher={Hindawi Publishing Corporation}
+% check authors names:
+@article{Milton2013caring,
+  author = {Milton, John},
+  title = {{Caring for Patients with Chronic Pain: Pearls and Pitfalls}},
+  journal = {The Journal},
+  volume = "113",
+  number = "8",
+  pages = "620",
+  year = 2013
 }
 
-@book{ekman1997face,
-  title={What the face reveals: Basic and applied studies of spontaneous expression using the Facial Action Coding System (FACS)},
-  author={Ekman, Paul and Rosenberg, Erika L},
-  year={1997},
-  publisher={Oxford University Press, USA}
+%--
+%P
+%--
+
+% check authors names:
+@article{Portenoy1996visual,
+  author = {Portenoy, R.K. and Tanner, R.M.},
+  title = {{Visual Analog Scale and Verbal Pain Intensity Scale: from Pain Management: Theory and Practice}},
+  journal = {Oxford University Press, Inc},
+  volume = "1",
+  pages = "996",
+  year = 1996
 }
 
-@inproceedings{lucey2011painful,
-  title={Painful data: The UNBC-McMaster shoulder pain expression archive database},
-  author={Lucey, Patrick and Cohn, Jeffrey F and Prkachin, Kenneth M and Solomon, Patricia E and Matthews, Iain},
-  booktitle={Automatic Face \& Gesture Recognition and Workshops (FG 2011), 2011 IEEE International Conference on},
-  pages={57--64},
-  year={2011},
-  organization={IEEE}
+%--
+%W
+%--
+
+% check authors names:
+@article{Wong1996wong,
+  author = {Wong, Donna Lee and Hockenberry-Eaton, M. and Wilson, D. and Winkelstein, M.L. and Schwartz, P.},
+  title = {{Wong-Baker Faces Pain Rating Scale}},
+  journal = {Home Health Focus},
+  volume = "2",
+  number = "8",
+  pages = "62",
+  year = 1996
 }
+
