--- a/main.tex
+++ b/main.tex
@@ -15,8 +15,18 @@
 \usepackage{capt-of}
 \usepackage{hyperref}
 \usepackage{minted}
+\usepackage{xcolor}
+
+\setlength{\oddsidemargin}{0.0in}
+\setlength{\topmargin}{-0.125in}
+\setlength{\textwidth}{6.25in}
+\setlength{\textheight}{8.75in}
+\parskip 5pt plus 3pt minus 2pt
+
+
 \date{}
-\title{to be defined}
+\title{\emph{Integrating Deep Learning in Expert Systems\\ for Medical Diagnosis}}
+\author{Willian Van der Valem Paiva}
 \hypersetup{
  pdfauthor={Willian Ver Valen Paiva},
  pdftitle={to be defined},
@@ -28,14 +38,17 @@
 
 \maketitle
 
-\usepackage{xcolor}
 \definecolor{ForestGreen}{rgb}{0.0, 0.5, 0.0}
 \newcommand{\vincent}[1]{{\color{ForestGreen}#1}}
 \newcommand{\vincentrmk}[1]{{\color{ForestGreen}\bf #1}}
 
 
-\section{Context}
+\section{Contexte}
 \label{sec:orgf816e45}
+
+\vincentrmk{mention Lucine early on}
+
+\vincentrmk{Discuss Watson}
 
 Le début  du XXIème  siècle a vu  une augmentation  spectaculaire d’applications
 informatiques apportant  une assistance  à de  nombreuses activités  humaines, y
@@ -99,7 +112,7 @@ partir d'images. Les résultats obtenus sont restés limités, puisqu'ils ont po
 sur la présence ou l’absence de douleur (« pain or no pain »).
 
 Une autre recherche  menée sur le même  sujet avec les mêmes  données, est celle
-qui        a       été        menée        à       l’Université        d’Aalborg
+qui        a       été        menée        à       l’Université        d’Aalborg,
 Danemark~\cite{bellantonio2016spatio}. Cette  recherche, plus récente,  a obtenu
 des  résultats  plus  prometteurs,  en  utilisant  une  combinaison  de  réseaux
 neuronaux convolutionnels, et de réseaux neuronaux récurrents.  En combinant ces
@@ -124,14 +137,16 @@ patient~\cite{hale1997emotional}.
 \subsection{Approche}
 \label{sec:org97cce26}
 
-\vincentrmk{L'approche devrait etre mieux précisée : 1) pour compenser
-  l'absence de  donnees, Lucine  a créée/crée une  base de  donnees et
+\vincentrmk{
+  L'approche devrait etre mieux précisée : 1) pour compenser
+  l'absence de  donnees, Lucine  a créé/crée une  base de  donnees et
   details sur  la base  de donnees;  2) on  souhaite utiliser  le deep
   learning pour predire la douleur; 3) le deep learning a sans doute
   besoin de plus de donnees qu’on peut en creer; 4) l'idee de depart
   de la these est d'integrer la connaissance des experts humains sous
   forme de systeme expert; 5) nous allons donc developper des methodes
-pour combiner deep learning et systeme expert.}
+pour combiner deep learning et systeme expert: 1) define a set of if-then-else rules from the human
+  experts, 2) train deep networks for the conditions}
 
 Cette thèse propose une nouvelle approche du problème avec l’utilisation d’une
 nouvelle base de données générée grâce à la contribution de volontaires
@@ -156,6 +171,8 @@ cette thèse sera l’exploration des moyens d’y parvenir.
 \section{Objectifs de la thèse}
 \label{sec:orgf1f9281}
 
+\vincentrmk{}
+
 Comme les données sur ce sujet sont plutôt limitées, l’un des principaux
 objectifs de cette thèse sera d’entraîner des systèmes de \emph{Deep Learning} à être
 capables de mesurer de la façon la plus précise possible le niveau de douleur
@@ -173,14 +190,15 @@ sacrifier les capacités de généralisation du modèle.
 
 Les défis scientifiques que nous explorerons durant cette thèse sont~:
 \begin{itemize}
-\item proposer un modèle capable de fournir efficacement une mesure de la douleur
+\item proposer un modèle capable de fournir efficacement une mesure de
+  la douleur~;
 \item identifier les principaux points de décision qui peuvent être importés sur
 la base des connaissances des experts, et qui peuvent être utilisés pour
 améliorer les modèles d’apprentissage.
 \end{itemize}
 
 
-\section{Organization}
+\section{Organisation}
 \label{sec:org1cc9eab}
 Cette thèse se déroulera sur une période de 36 mois et pendant toute cette
 durée, le temps de travail se répartira entre le laboratoire hôte (le LABRI,
@@ -189,11 +207,20 @@ Université de Bordeaux), et la compagnie (Lucine).
 \subsection{Planning}
 \label{sec:org8a30be3}
 \begin{itemize}
-\item T0 + 6m:
-\item T0 + 12m:
-\item T0 + 18m:
-\item T0 + 24m:
-\item T0 + 36m: Writing of thesis and defense
+\item M1 - M6~: Discussion avec les experts humains pour cr\'eer un
+  ensemble de r\`egles et un syst\`eme expert. Identification des
+  conditions pour ces r\`egles.
+\item M7 - M12~: Collecte des donn\'ees permettant d'entrainer et
+  d'\'evaluer les \emph{Deep Networks} testant les conditions des
+  r\`egles du syst\`eme expert. 
+\item M13 - M18~: Entrainements et \'evaluations des \emph{Deep
+  Networks} \`a partir des donn\'ees collect\'ees. Premi\`eres
+  publications~(dans les domaines de l'Intelligence Articielle et m\'edical).
+\item M19 - M24~: Seconde it\'eration. Nouvelles captures de donn\'ees
+  selon l'experience acquise lors de la premi\`ere it\'eration.
+\item M25 - M30~: Nouveaux entrainements et \'evaluations  des \emph{Deep
+  Networks}. Nouvelles publications. 
+\item M31 - M36: R\'edaction et d\'efense de la th\`ese.
 \end{itemize}
 
 
